# ros-grpc-bridge-generator

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: generate.launch
scripts/: _server.py  generate  generate.ipynb  generate.py  generate_server.py  generate_stubs.sh  notebook  run_server  server.py  snapshot_ros_messages.py  test_generate.py  utils.py
template/: README.md
template/{{cookiecutter.pkg_name}}/: CMakeLists.txt  grpc_server.launch  package.xml  ros.proto  setup.py  snapshot.ini
template/{{cookiecutter.pkg_name}}/launch/: grpc_server.launch  server.launch
template/{{cookiecutter.pkg_name}}/nodes/: server
test/: generate.test
test/expected/pcl/: CMakeLists.txt  package.xml  ros.proto  setup.py
test/expected/pcl/launch/: grpc_server.launch  server.launch
test/expected/pcl/nodes/: server
test/expected/pcl/src/: pcl.py  ros_pb2.py  ros_pb2_grpc.py
test/expected/turtles/: CMakeLists.txt  package.xml  ros.proto  setup.py
test/expected/turtles/launch/: grpc_server.launch  server.launch
test/expected/turtles/nodes/: run
test/expected/turtles/src/: ros_pb2.py  ros_pb2_grpc.py  turtles.py
test/expected/usb_cam/: CMakeLists.txt  package.xml  ros.proto  setup.py
test/expected/usb_cam/launch/: grpc_server.launch  server.launch
test/expected/usb_cam/nodes/: run
test/expected/usb_cam/src/: ros_pb2.py  ros_pb2_grpc.py  usb_cam.py
test/snapshots/: pcl.ini  turtles.ini  usb_cam.ini
