<?xml version="1.0"?>
<package format="2">
  <name>grpc_api_generator</name>
  <version>0.1.0</version>
  <description>The grpc_api_generator package</description>

  <maintainer email="azazdeaz@gmail.comros">azazdeaz</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-cookiecutter</build_depend>
  <build_depend>jupyter-notebook</build_depend>
  <build_depend>python3-papermill-pip</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-cookiecutter</exec_depend>
  <exec_depend>jupyter-notebook</exec_depend>
  <exec_depend>python3-papermill-pip</exec_depend>
</package>
