<?xml version="1.0"?>
<package format="2">
  <name>{{cookiecutter.pkg_name}}</name>
  <version>0.0.0</version>
  <description>Generated gRPC server</description>
  <maintainer email="generator@todo.todo">robot</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python3-grpc-tools</build_depend>
  <build_depend>python3-grpcio</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python3-grpc-tools</exec_depend>
  <exec_depend>python3-grpcio</exec_depend>
</package>
